--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
     <head>
-  
+
 
     </head>
     <body>
@@ -12,7 +12,7 @@
           <h3>Pianeta terra</h3>
           <h4>Europa</h4>
           <h5>Italia</h5>
-          <h6>Milano</h6>
+          <h6>Napoli</h6>
 
 
 
