--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
 
     <head>
-        <title>la mia prima pagina web</title>
+        <title>la mia prima pagina web|di Veronica Dolce</title>
+        <link rel="icon" href="/favicon.ico" /> 
 
-    </head>
+   </head>
     <body>
 
           <h1>Goodmorning Vietnam</h1>
