--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
     <head>
         <title>la mia prima pagina web|di Veronica Dolce</title>
-        <link rel="icon" href="favicon.ico" /> 
+        <link rel="icon" href="https://d30y9cdsu7xlg0.cloudfront.net/png/86105-200.png" type="PNG"/> 
 
    </head>
     <body>
