INSERIMENTO ICONA PNG LAMP

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
     <head>
         <title>la mia prima pagina web|di Veronica Dolce</title>
-        <link rel="icon" href="https://veronicadolce.github.io/favicon.ico" />
+        <link rel="icon" href="http://images.clipartpanda.com/light-bulb-outline-8823.png" type="PNG" />
 
    </head>
     <body>
