--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
     <head>
         <title>la mia prima pagina web|di Veronica Dolce</title>
-        <link rel="icon" href="http://images.clipartpanda.com/light-bulb-outline-8823.png" type="PNG" />
+        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
 
    </head>
     <body>
