--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>la mia prima pagina web|di Veronica Dolce</title>
         <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
+        <link rel="stylesheet" type="text/css" href="main.css"/>
 
    </head>
     <body>
