--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
     <head>
         <title>la mia prima pagina web|di Veronica Dolce</title>
-        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
+        <link rel="shortcut icon" type="image/x-icon" href="http://www.materialise.com/sites/default/files/lamp.png"/>
         <link rel="stylesheet" type="text/css" href="main.css"/>
 
    </head>
