--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
+<!DOCTYPE html>
+
 <html>
 
     <head>
-        <title>la mia prima pagina web|di Veronica Dolce</title>
+
+        <title>La mia prima pagina web|di Veronica Dolce</title>
+        <meta charset="utf-8"/>
+
         <link rel="shortcut icon" type="image/x-icon" href="http://www.materialise.com/sites/default/files/lamp.png"/>
         <link rel="stylesheet" type="text/css" href="main.css"/>
 
@@ -9,13 +14,15 @@
     <body>
 
           <h1>Goodmorning Vietnam</h1>
-          <p>Questa è <strong>la mia prima pagina html</strong> :)</p>
+          <p>Questa è <strong>la mia prima pagina html</strong> &#9786;</p>
           <h2>Sistema solare</h2>
           <h3>Pianeta terra</h3>
           <h4>Europa</h4>
           <h5>Italia</h5>
           <h6>Napoli</h6>
-          <h6>Roma</h6>
+          <h6>Roma &#9786; </h6>
+
+
 
 
 
