Modifica file con biografia e contatti

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
    </head>
     <body>
 
-          <h1>Goodmorning Vietnam</h1>
-          <p>Questa è <strong>la mia prima pagina html</strong> &#9786;</p>
-          <h2>Sistema solare</h2>
-          <h3>Pianeta terra</h3>
-          <h4>Europa</h4>
-          <h5>Italia</h5>
-          <h6>Napoli</h6>
-          <h6>Roma &#9786; </h6>
+          <h1>Veronica Dolce</h1>
+          <h2>Life Coach &#38; Founder Trigger Srl</h2><hr>
+
+          <h3>Biografia</h3>
+          <p>Chi sono e cosa ho fatto fin'ora<p>
+          <h3>Contatti</h3>
+          <p>Dove potete trovarmi<p>
+
 
 
 
