--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
           <h2>Life Coach &#38; Founder Trigger Srl</h2><hr>
 
           <h3>Biografia</h3>
-          <p>Chi sono e cosa ho fatto fin'ora<p>
+          <p>Chi sono e cosa ho fatto fin'ora</p>
           <h3>Contatti</h3>
-          <p>Dove potete trovarmi<p>
+          <p>Dove potete trovarmi</p>
 
 
 
