--- a/index.html
+++ b/index.html
@@ -14,12 +14,22 @@
     <body>
 
           <h1>Veronica Dolce</h1>
-          <h2>Life Coach &#38; Founder Trigger Srl</h2><hr>
+          <h2>Life Coach &#38; Founder Trigger Srl</h2>
+
+          <hr>
 
           <h3>Biografia</h3>
-          <p>Chi sono e cosa ho fatto fin'ora</p>
+          <p><strong>Chi</strong>sono e <strong>cosa</strong> ho fatto fin'ora</p>
+
           <h3>Contatti</h3>
-          <p>Dove potete trovarmi</p>
+          <p>Dove potete trovarmi <em>online</em> e <em>offline</em></p>
+
+          <br>
+
+          <p>email: veronica.dolce@outlook.it</p>
+          <p>cellulare: +333 4906XXX</p>
+
+          <a href="https://www.linkedin.com/in/veronicadolcecoach?trk=nav_responsive_tab_profile">Per saperne di più</a>
 
 
 
