collegamento linkedin punta a nuova scheda

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <p>email: veronica.dolce@outlook.it</p>
           <p>cellulare: +333 4906XXX</p>
 
-          <a href="https://www.linkedin.com/in/veronicadolcecoach?trk=nav_responsive_tab_profile">Per saperne di più</a>
+          <a href="https://www.linkedin.com/in/veronicadolcecoach?trk=nav_responsive_tab_profile" target="_blank">Per saperne di più</a>
 
 
 
