--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
           <br>
 
-          <p>email: veronica.dolce@outlook.it</p>
+          <p>email:<a href="mailto:veronica.dolce@outlook.it?Subject=Ciao%20Veronica!"> veronica.dolce@outlook.it</a></p>
           <p>cellulare: +333 4906XXX</p>
 
           <a href="https://www.linkedin.com/in/veronicadolcecoach?trk=nav_responsive_tab_profile" target="_blank">Per saperne di più</a>
