--- a/index.html
+++ b/index.html
@@ -10,16 +10,22 @@
         <link rel="shortcut icon" type="image/x-icon" href="http://www.materialise.com/sites/default/files/lamp.png"/>
         <link rel="stylesheet" type="text/css" href="main.css"/>
 
+        </style>
+
    </head>
     <body>
+
+          <img src="http://www.materialise.com/sites/default/files/lamp.png" width="180"/>
 
           <h1>Veronica Dolce</h1>
           <h2>Life Coach &#38; Founder Trigger Srl</h2>
 
           <hr>
 
+          <iframe width="600" height="300" src="http://www.youtube.com/embed/qp0HIF3SfI4"></iframe>
+
           <h3>Biografia</h3>
-          <p><strong>Chi</strong>sono e <strong>cosa</strong> ho fatto fin'ora</p>
+          <p><strong>Chi </strong>sono e <strong>cosa</strong> ho fatto fin'ora</p>
 
           <h3>Contatti</h3>
           <p>Dove potete trovarmi <em>online</em> e <em>offline</em></p>
