--- a/index.html
+++ b/index.html
@@ -22,18 +22,31 @@
 
           <hr>
 
-          <iframe width="600" height="300" src="http://www.youtube.com/embed/qp0HIF3SfI4">Simon Sinek - How great leader inspire action</iframe>
+          <br>
+
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/qp0HIF3SfI4?autoplay=1"></iframe>
+
+          <br>
 
           <h3>Biografia</h3>
           <p><strong>Chi </strong>sono e <strong>cosa</strong> ho fatto fin'ora</p>
+
+          <hr>
+          <br>
 
           <h3>Contatti</h3>
           <p>Dove potete trovarmi <em>online</em> e <em>offline</em></p>
 
           <br>
 
-          <p>email:<a href="mailto:veronica.dolce@outlook.it?Subject=Ciao%20Veronica!"> veronica.dolce@outlook.it</a></p>
-          <p>cellulare: +333 4906XXX</p>
+          <ul>
+
+            <li><strong>Email:</strong><a href="mailto:veronica.dolce@outlook.it?Subject=Ciao%20Veronica!">
+              veronica.dolce@outlook.it</a></li>
+            <li><strong>Cellulare:</strong> +333 4906XXX</li>
+            <li><strong>Skype:</strong> veronica.dolce
+
+          </ul>
 
           <a href="https://www.linkedin.com/in/veronicadolcecoach?trk=nav_responsive_tab_profile" target="_blank">Per saperne di più</a>
 
