--- a/index.html
+++ b/index.html
@@ -15,41 +15,79 @@
    </head>
     <body>
 
-          <img src="http://www.materialise.com/sites/default/files/lamp.png" width="180"/>
+      <div class="container">
 
-          <h1>Veronica Dolce</h1>
-          <h2>Life Coach &#38; Founder Trigger Srl</h2>
+          <div class="main">
+
+
+            <div class="titolo">
+
+               <div class="logo">
+                 <img src="http://www.materialise.com/sites/default/files/lamp.png" width="180"/>
+              </div>
+
+              <div class="nome">
+               <h1>Veronica Dolce</h1>
+               <h2>Life Coach &#38; Founder Trigger Srl</h2>
+             </div>
+
+           </div>
+
 
           <hr>
 
           <br>
 
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/qp0HIF3SfI4?autoplay=1"></iframe>
+          <div class="riga2">
+
+              <div class="video">
+              <iframe  width="560" height="315" src="https://www.youtube.com/embed/qp0HIF3SfI4?autoplay=1"></iframe>
+            </div>
+
+          </div>
 
           <br>
 
-          <h3>Biografia</h3>
-          <p><strong>Chi </strong>sono e <strong>cosa</strong> ho fatto fin'ora</p>
+          <div class="bio">
+
+                <img id="fotoprofilo" src="image.png" type="PNG" width="180"/>
+
+                <h3>Biografia</h3>
+                <p>Credo nei progetti speciali e negli obiettivi impossibili.
+                <strong>Credo che "non è mai stato fatto prima" non vuol dire "non si può fare".</strong>
+                Credo nell'infinito potenziale degli esseri umani, tutti. Mi sono cimentata in tre campi da gioco:
+                la Bocconi, il Ministero degli Esteri e Vanity Fair.
+                Da ogni campo sono uscita con una lezione in tasca e un nuovo desiderio nel cuore.
+                <strong>Ho corso tanto e affannosamente, poi ho capito che la fonte della felicità è sotto i nostri piedi,
+                allora mi sono fermata e ho iniziato a scavare.</strong></p>
+
+          </div>
 
           <hr>
-          <br>
 
-          <h3>Contatti</h3>
-          <p>Dove potete trovarmi <em>online</em> e <em>offline</em></p>
+          <div class="navbar">
 
-          <br>
+            <h3>Contatti</h3>
 
-          <ul>
+            <br>
 
-            <li><strong>Email:</strong><a href="mailto:veronica.dolce@outlook.it?Subject=Ciao%20Veronica!">
+            <ul>
+
+              <li><strong>Email: </strong><a href="mailto:veronica.dolce@outlook.it?Subject=Ciao%20Veronica!">
               veronica.dolce@outlook.it</a></li>
-            <li><strong>Cellulare:</strong> +333 4906XXX</li>
-            <li><strong>Skype:</strong> veronica.dolce
+              <li><strong>Cellulare:</strong> +333 4906XXX</li>
+              <li><strong>Skype:</strong> veronica.dolce
 
-          </ul>
+            </ul>
 
-          <a href="https://www.linkedin.com/in/veronicadolcecoach?trk=nav_responsive_tab_profile" target="_blank">Per saperne di più</a>
+            <a href="https://www.linkedin.com/in/veronicadolcecoach?trk=nav_responsive_tab_profile" target="_blank">Per saperne di più</a>
 
+          </div>
+
+
+        </div>
+
+      </div>
 
 
 
