Aggiornamento font e inserimento quote

--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
         <link rel="shortcut icon" type="image/x-icon" href="http://www.materialise.com/sites/default/files/lamp.png"/>
         <link rel="stylesheet" type="text/css" href="main.css"/>
 
-        </style>
-
    </head>
     <body>
 
@@ -20,42 +18,45 @@
           <div class="main">
 
 
-            <div class="titolo">
+            <div class="banner">
+
 
                <div class="logo">
                  <img src="http://www.materialise.com/sites/default/files/lamp.png" width="180"/>
-              </div>
+               </div>
 
-              <div class="nome">
+            <div class="nome">
                <h1>Veronica Dolce</h1>
                <h2>Life Coach &#38; Founder Trigger Srl</h2>
-             </div>
+            </div>
 
            </div>
-
 
           <hr>
 
           <br>
 
-          <div class="riga2">
+          <div class="banner2">
 
               <div class="video">
                 <br>
               <iframe  width="560" height="315" src="https://www.youtube.com/embed/qp0HIF3SfI4?autoplay=1"></iframe>
                 <br>
                 <br>
-            </div>
+             </div>
 
-          </div>
+             <div class="quote">
+               <p><em>"People don't buy what you do, they buy why you do it"</em></p>
+             </div>
+
+           </div>
 
           <br>
 
-          <div class="bio">
+          <div class="banner3">
 
-                <img id="fotoprofilo" src="image.png" type="PNG" width="180"/>
-
-                <h3>Biografia</h3>
+                <div class="bio">
+                <h3>Chi sono</h3>
                 <p>Credo nei progetti speciali e negli obiettivi impossibili.
                 <strong>Credo che "non è mai stato fatto prima" non vuol dire "non si può fare".</strong>
                 Credo nell'infinito potenziale degli esseri umani, tutti. Mi sono cimentata in tre campi da gioco:
@@ -63,10 +64,17 @@
                 Da ogni campo sono uscita con una lezione in tasca e un nuovo desiderio nel cuore.
                 <strong>Ho corso tanto e affannosamente, poi ho capito che la fonte della felicità è sotto i nostri piedi,
                 allora mi sono fermata e ho iniziato a scavare.</strong></p>
+                </div>
+
+                <div class="foto">
+                <img src="image.png" type="PNG" width="200"/>
+                </div>
 
           </div>
 
           <hr>
+
+      </div>
 
           <div class="navbar">
 
@@ -87,8 +95,6 @@
 
           </div>
 
-
-        </div>
 
       </div>
 
